examples/test/testpolicy17087.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17087
  namespace: namespace56
spec:
  podSelector:
    matchLabels:
      key5: value16
      key28: value30
      key43: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value15
      podSelector:
        matchLabels:
          key47: value9
          key35: value33
          key30: value20
